<resources>
    <string name="app_name">Nutrigo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="carbs">CARBS:</string>
    <string name="add_food_item">ADD FOOD ITEM</string>
    <string name="confirm">CONFIRM</string>
    <string name="manually_enter">MANUALLY ENTER MACROS</string>
    <string name="fat">FAT:</string>
    <string name="protein">PROTEIN:</string>
    <string name="calories">CALORIES:</string>
    <string name="select">SELECT</string>
    <string name="confirm_macros">CONFIRM MACROS</string>
    <string name="meal_name">MEAL NAME</string>
</resources>
